ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript6/ShorthandPropertyAssignment/parserShorthandPropertyAssignment1/input.ts.stderr
error[1162]: An object member cannot be declared optional
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript6/ShorthandPropertyAssignment/parserShorthandPropertyAssignment1/input.ts:4:11
  |
4 | foo({ name?, id? });
  |           ^

error[1162]: An object member cannot be declared optional
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript6/ShorthandPropertyAssignment/parserShorthandPropertyAssignment1/input.ts:4:16
  |
4 | foo({ name?, id? });
  |                ^

